# Seismic-Fault-Recognition

./: .gitignore  README.md  fault-former.ipynb  fault_former_updated.ipynb  fine_tuning_swinunetr.ipynb  pyproject.toml  requirements-datasphere.txt  requirements-preprocessing.txt  swin_tiny.ipynb  swinunetr-thebe-dataset.ipynb  swinunetr_thebe_dataset.ipynb  visualize_swin_tiny_thebe_test.ipynb
.github/workflows/: tests.yml
configs/: datasphere.yaml
configs/experiments/: 00_environment_and_data_check.yaml  01_data_cleaning_and_audit.yaml  02_simmim_swinunetr_thebe_pretrain.yaml  11_sr_training_seisgan.yaml  (+13 more)
docs/: cli_reference.md  data_inventory.md  github_publication.md  models_and_losses.md  notebook_validation.md  preprocessing_extension.md  swinunetr_tiny.md  training_validation_architecture.md
notebooks/: 00_environment_and_data_check.ipynb  01_data_cleaning_and_audit.ipynb  02_simmim_swinunetr_thebe_pretrain.ipynb  03_simmim_omniseis_thebe_pretrain.ipynb  04_faultseg3d_swin_tiny_pretrain.ipynb  05_faultseg3d_omniseis_pretrain.ipynb  06_swinunetr_thebe_finetune_raw.ipynb  07_swinunetr_thebe_finetune_clean_sr_cubes.ipynb  08_omniseis_thebe_finetune_raw.ipynb  09_omniseis_thebe_finetune_clean_cubes.ipynb  10_omniseis_thebe_finetune_clean_sr_aug_reg.ipynb  11_sr_training_seisgan.ipynb  12_segmentation_validation.ipynb  13_end_to_end_sr_segmentation_validation.ipynb  14_swinunetr_tiny.ipynb  15_faultformer_variants.ipynb  16_3d_visualization.ipynb  README.md
scripts/: validate_notebooks.py
tests/: test_checkpoints.py  test_preprocessing.py  test_project.py
(+32 files in other folders)
